# sum_ai_backend

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
api/: aws_ses_email.py  custom_storage.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  views.py
api/migrations/: 0001_initial.py
api/modules/common/basic_abstrac_model/: basic_abstrac_model.py
api/modules/common/binnacle/: binnacle_model.py  binnacle_serializer.py  binnacle_view.py
api/modules/common/sent_message/: sent_message_model.py
api/modules/parameter/: parameter_model.py  parameter_serializer.py  parameter_view.py
api/modules/user/models/: user_model.py
api/modules/user/serializers/: group_serializer.py  permission_serializer.py  user_serializer.py
api/modules/user/views/: group_view.py  permission_view.py  user_view.py
sum_ai/: asgi.py  router.py  settings.py  urls.py  wsgi.py
